<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_employee"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_dark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.endorphinapps.kemikal.queenofclean.AddEmployee">

    <LinearLayout
        style="@style/container"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_populate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Populate" />

            <TableRow>
                <TextView
                    style="@style/field_end"
                    android:hint="@string/first_name" />

                <EditText
                    android:id="@+id/add_first_name"
                    style="@style/field_weight_1"
                    android:inputType="textAutoComplete|textCapWords" />
            </TableRow>


            <TableRow>
                <TextView
                    style="@style/field_end"
                    android:hint="@string/last_name" />

                <EditText
                    android:id="@+id/add_last_name"
                    style="@style/field_weight_1"
                    android:inputType="textAutoComplete|textCapWords" />
            </TableRow>

            <TableRow>
                <TextView
                    style="@style/field_end"
                    android:hint="@string/mobile_number" />

                <EditText
                    android:id="@+id/add_mobile_number"
                    style="@style/field_weight_1"
                    android:inputType="phone" />
            </TableRow>

            <TableRow>
                <TextView
                    style="@style/field_end"
                    android:hint="@string/home_number" />

                <EditText
                    android:id="@+id/add_home_number"
                    style="@style/field_weight_1"
                    android:inputType="phone" />
            </TableRow>


            <TableRow>
                <TextView
                    style="@style/field_end"
                    android:hint="@string/email_address" />

                <EditText
                    android:id="@+id/add_email"
                    style="@style/field_weight_1"
                    android:inputType="textEmailAddress" />
            </TableRow>

            <TableRow>
                <TextView
                    style="@style/field_end"
                    android:hint="@string/address_line_1" />

                <EditText
                    android:id="@+id/add_address_line_1"
                    style="@style/field_weight_1"
                    android:inputType="textAutoComplete|textCapWords" />
            </TableRow>

            <TableRow>
                <TextView
                    style="@style/field_end"
                    android:hint="@string/address_line_2" />

                <EditText
                    android:id="@+id/add_address_line_2"
                    style="@style/field_weight_1"
                    android:inputType="textAutoComplete|textCapWords" />
            </TableRow>


            <TableRow>
                <TextView
                    style="@style/field_end"
                    android:hint="@string/town" />

                <EditText
                    android:id="@+id/add_town"
                    style="@style/field_weight_1"
                    android:inputType="textAutoComplete|textCapWords" />
            </TableRow>


            <TableRow>
                <TextView
                    style="@style/field_end"
                    android:hint="@string/city" />

                <EditText
                    android:id="@+id/add_city"
                    style="@style/field_weight_1"
                    android:inputType="textAutoComplete|textCapWords" />
            </TableRow>


            <TableRow>
                <TextView
                    style="@style/field_end"
                    android:hint="@string/postcode" />

                <EditText
                    android:id="@+id/add_postcode"
                    style="@style/field_weight_1"
                    android:inputType="textPostalAddress" />
            </TableRow>

            <TableRow>
                <TextView
                    style="@style/field_end"
                    android:hint="@string/rate_of_pay" />

                <EditText
                    android:id="@+id/add_rate_of_pay"
                    style="@style/field_weight_1"
                    android:inputType="numberDecimal" />
            </TableRow>


            <Button
                android:id="@+id/add_submit"
                style="@style/submit_button"
                android:text="@string/submit" />
        </TableLayout>
    </LinearLayout>
</ScrollView>
